# circangle

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Examples/: VBO,EBO,VAO Example
Resources/: ResourceService.cpp  ResourceService.hpp  sugar.cmake
Setup/: OpenGLSetup.cpp  OpenGLSetup.h  sugar.cmake
Shaders/: FragmentShader.glsl  FragmentShaderSource.cpp  FragmentShaderSource.h  Shaders.cpp  Shaders.h  VecterShaderSource.cpp  VecterShaderSource.h  VertexShader.glsl  sugar.cmake
Textures/: sugar.cmake
Textures/Texture Loader/: stb_image.cpp  sugar.cmake
cmake/: TargetOptions.cmake
